--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Media Query for Screen</title>
+    <title>Cassandra Pacheco Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
-    <h1>Place holder</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-    <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="http://placekitten.com/200/300" alt="Kitten"></a></figure>
+   <h1>Cassandra Pacheco</h1>
+
+   <nav>
+     <ul>
+      <li> <a href="#Aboutme">About Me</a></li>
+      <li> <a href="#Work">Work</a></li>
+      <li> <a href="#Contactme">Contact Me</a></li>
+      <li> <a href="#Resume">Resume</a></li>
+    </ul> 
+   </nav>
+    <img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
+
+  <a name="Aboutme"><h1>About Me</h1></a>
+   <section>
+     <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
+     <p>Though I am a very busy woman, in my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix.</p>
+     <p>Please see my work below as an example of some of my new learned skills.</p>
+   </section>
+
+   <a name="Work"><h1>Work</h1></a>
+
+   <section class="card">
+     <header>Get the Cheesy Puffs</header>
+     <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Scratchgame.jpg" alt="Scratch game picture"></a></figure>
+   </section>
+
+   <section class="card2">
+     <Header>My First Website</Header>
+     <figure> <a href= https://cassiep1986.github.io/prework-about-me><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a></figure>
+   </section>
+
+   <section class="card2">
+    <Header>Code Refactor</Header>
+    <figure> <a href= https://cassiep1986.github.io/Code-Refactor><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Coderefactor.jpg" alt="Placeholder image"></a></figure>
+  </section>
+    
 </body>
