Finished rough draft. Added most of html content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li> <a href="#Aboutme">About Me</a></li>
       <li> <a href="#Work">Work</a></li>
       <li> <a href="#Contactme">Contact Me</a></li>
-      <li> <a href="#Resume">Resume</a></li>
+      <li> <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a></li>
     </ul> 
    </nav>
     <img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
@@ -43,4 +43,16 @@
     <figure> <a href= https://cassiep1986.github.io/Code-Refactor><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Coderefactor.jpg" alt="Placeholder image"></a></figure>
   </section>
     
+  <footer>
+    <a name="Contactme"><h1>Contact Me</h1></a>
+
+  <nav>
+    <ul>
+     <li><a href="tel6232164385">Phone</a></li>
+     <li><a href=mailtocassiep1986@gmail.com>Email</a></li>
+     <li><a href=https://github.com/Cassiep1986>Github</a></li>
+     <li><a href=https://www.linkedin.com/in/cassandra-pacheco-367ab376>Linkedin</a></li>
+   </ul> 
+  </nav>
+
 </body>
