--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <title>Cassandra Pacheco Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/reset.css">
     <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
-   <h1>Cassandra Pacheco</h1>
+   <h1 id="name">Cassandra Pacheco</h1>
 
-   <nav>
-     <ul>
-      <li> <a href="#Aboutme">About Me</a></li>
-      <li> <a href="#Work">Work</a></li>
-      <li> <a href="#Contactme">Contact Me</a></li>
-      <li> <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a></li>
-    </ul> 
+   <nav class="topnav">
+       <a href="#Aboutme">About Me</a>
+       <a href="#Work">Work</a>
+       <a href="#Contactme">Contact Me</a>
+       <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
    </nav>
-    <img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
+    <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
 
-  <a name="Aboutme"><h1>About Me</h1></a>
+  <a class="page" name="Aboutme"><h1>About<br>Me</h1></a>
    <section>
      <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
      <p>Though I am a very busy woman, in my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix.</p>
@@ -44,14 +43,14 @@
   </section>
     
   <footer>
-    <a name="Contactme"><h1>Contact Me</h1></a>
+    <a name="Contactme"><h1>Contact<br>Me</h1></a>
 
   <nav>
     <ul>
-     <li><a href="tel6232164385">Phone</a></li>
-     <li><a href=mailtocassiep1986@gmail.com>Email</a></li>
-     <li><a href=https://github.com/Cassiep1986>Github</a></li>
-     <li><a href=https://www.linkedin.com/in/cassandra-pacheco-367ab376>Linkedin</a></li>
+     <li><a href="tel:6232164385">Phone</a></li>
+     <li><a href="mailtocassiep1986@gmail.com">Email</a></li>
+     <li><a href="https://github.com/Cassiep1986">Github</a></li>
+     <li><a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376">Linkedin</a></li>
    </ul> 
   </nav>
 
