--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
-   <h1 id="name">Cassandra Pacheco</h1>
+   <h1 id="name">   Cassandra Pacheco</h1>
 
    <nav class="topnav">
        <a href="#Aboutme">About Me</a>
@@ -18,7 +18,7 @@
    </nav>
     <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
 
-  <a class="page" name="Aboutme"><h1>About<br>Me</h1></a>
+  <a class="page" name="Aboutme"><h1>About<br class="secondword">Me</h1></a>
    <section>
      <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
      <p>Though I am a very busy woman, in my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix.</p>
