--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
    </nav>
     <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
 
-  <a class="page" name="Aboutme"><h1>About<br class="secondword">Me</h1></a>
-   <section>
-     <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
-     <p>Though I am a very busy woman, in my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix.</p>
-     <p>Please see my work below as an example of some of my new learned skills.</p>
-   </section>
+  <a class="about" name="Aboutme"><h1>About Me</h1></a>
+    <section>
+    <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
+    <p>In my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix. Please see my work below as an example of some of my new learned skills.</p>
+  </section> 
+   
 
-   <a name="Work"><h1>Work</h1></a>
+   <a class="page" name="Work"><h1>Work</h1></a>
 
    <section class="card">
      <header>Get the Cheesy Puffs</header>
@@ -43,7 +43,7 @@
   </section>
     
   <footer>
-    <a name="Contactme"><h1>Contact<br>Me</h1></a>
+    <a class="page" name="Contactme"><h1>Contact<br>Me</h1></a>
 
   <nav>
     <ul>
