added background color, made adjustments to css format

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Cassandra Pacheco Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/reset.css">
     <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
@@ -17,20 +16,24 @@
        <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
    </nav>
     <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
-
-  <a class="about" name="Aboutme"><h1>About Me</h1></a>
-    <section>
+    
+<div class="flex1">
+  <a name="Aboutme"><h1>About Me</h1></a>
+  <section class="text">
     <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
-    <p>In my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix. Please see my work below as an example of some of my new learned skills.</p>
-  </section> 
+
+    </p>In my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix. Please see my work below as an example of some of my new learned skills.</p>
+  </section>
+  </div> 
    
 
-   <a class="page" name="Work"><h1>Work</h1></a>
-
-   <section class="card">
+  <div class="flex2">
+  <a name="Work"><h1>Work</h1></a>
+   <section>
      <header>Get the Cheesy Puffs</header>
      <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Scratchgame.jpg" alt="Scratch game picture"></a></figure>
    </section>
+  </div> 
 
    <section class="card2">
      <Header>My First Website</Header>
@@ -43,12 +46,12 @@
   </section>
     
   <footer>
-    <a class="page" name="Contactme"><h1>Contact<br>Me</h1></a>
+    <a name="Contactme"><h1>Contact<br>Me</h1></a>
 
   <nav>
     <ul>
      <li><a href="tel:6232164385">Phone</a></li>
-     <li><a href="mailtocassiep1986@gmail.com">Email</a></li>
+     <li><a href="mailto:cassiep1986@gmail.com">Email</a></li>
      <li><a href="https://github.com/Cassiep1986">Github</a></li>
      <li><a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376">Linkedin</a></li>
    </ul> 
