adjusted placement of images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
     
 <div class="flex1">
-  <a name="Aboutme"><h1>About Me</h1></a>
+  <a name="Aboutme"><h1>About    Me</h1></a>
   <section class="text">
     <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
 
@@ -26,24 +26,22 @@
   </section>
   </div> 
    
+<br>
 
   <div class="flex2">
   <a name="Work"><h1>Work</h1></a>
    <section>
-     <header>Get the Cheesy Puffs</header>
-     <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Scratchgame.jpg" alt="Scratch game picture"></a></figure>
-   </section>
+     <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="https://cdn.crello.com/api/media/small/251844263/stock-photo-selective-focus-steering-wheel-compact"></a></figure>
+    </section>
   </div> 
-
-   <section class="card2">
-     <Header>My First Website</Header>
-     <figure> <a href= https://cassiep1986.github.io/prework-about-me><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a></figure>
+  <div class="flex3">
+   <section class="card">
+       <a href= https://cassiep1986.github.io/prework-about-me><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
    </section>
-
-   <section class="card2">
-    <Header>Code Refactor</Header>
-    <figure> <a href= https://cassiep1986.github.io/Code-Refactor><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Coderefactor.jpg" alt="Placeholder image"></a></figure>
-  </section>
+    <section class="card">
+       <a href= https://cassiep1986.github.io/Code-Refactor><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Coderefactor.jpg" alt="Placeholder image"></a>
+    </section>
+  </div>
     
   <footer>
     <a name="Contactme"><h1>Contact<br>Me</h1></a>
