--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
-   <h1 id="name">   Cassandra Pacheco</h1>
+  <header>
+   <h1 id="name">Cassandra Pacheco</h1>
 
    <nav class="topnav">
        <a href="#Aboutme">About Me</a>
@@ -15,44 +16,50 @@
        <a href="#Contactme">Contact Me</a>
        <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
    </nav>
+  </header>
     <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
     
 <div class="flex1">
-  <a name="Aboutme"><h1>About    Me</h1></a>
+  <a name="Aboutme"><h1>About Me</h1></a>
   <section class="text">
     <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
 
     </p>In my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix. Please see my work below as an example of some of my new learned skills.</p>
   </section>
-  </div> 
+</div> 
    
 <br>
 
   <div class="flex2">
   <a name="Work"><h1>Work</h1></a>
-   <section>
-     <figure> <a href= https://scratch.mit.edu/projects/531268141><img src="https://cdn.crello.com/api/media/small/251844263/stock-photo-selective-focus-steering-wheel-compact"></a></figure>
+   <section class="textcontainer">
+  <a href= https://scratch.mit.edu/projects/531268141><img src="https://cdn.crello.com/api/media/small/251844263/stock-photo-selective-focus-steering-wheel-compact"></a>
+  <p class="pictext">Scratch Game</p>
     </section>
   </div> 
   <div class="flex3">
-   <section class="card">
-       <a href= https://cassiep1986.github.io/prework-about-me><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
+   <section class="textcontainer">
+       <a href= https://cassiep1986.github.io/prework-about-me>
+        <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
+        <p class="pictext">My first Website</p>
    </section>
-    <section class="card">
-       <a href= https://cassiep1986.github.io/Code-Refactor><img src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Coderefactor.jpg" alt="Placeholder image"></a>
-    </section>
+   <section class="textcontainer">
+    <a href= https://cassiep1986.github.io/Code-Refactor>
+     <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
+     <p class="pictext">Code-Refractor</p>
+</section>
   </div>
     
-  <footer>
+<footer>
+  <section class="contact">
     <a name="Contactme"><h1>Contact<br>Me</h1></a>
 
-  <nav>
-    <ul>
-     <li><a href="tel:6232164385">Phone</a></li>
-     <li><a href="mailto:cassiep1986@gmail.com">Email</a></li>
-     <li><a href="https://github.com/Cassiep1986">Github</a></li>
-     <li><a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376">Linkedin</a></li>
-   </ul> 
+  <nav class="bottomnav">
+    <a href="tel:6232164385">Phone</a>
+    <a href="mailto:cassiep1986@gmail.com">Email</a>
+    <a href="https://github.com/Cassiep1986">Github</a>
+    <a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376">Linkedin</a>
   </nav>
-
+  </section>
+</footer>
 </body>
