--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cassandra Pacheco Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
+    <link rel="stylesheet" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
 
 <body>
   <header>
