Updated image links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
    </nav>
   </header>
-    <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
+    <img class="headshot"src="./headshot.jpg" alt="Picture of Developer">
     
 <div class="flex1">
   <a name="Aboutme"><h1>About Me</h1></a>
@@ -40,12 +40,12 @@
   <div class="flex3">
    <section class="textcontainer">
        <a href= https://cassiep1986.github.io/prework-about-me>
-        <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
+        <img class = "card" src="./Website.jpg" alt="Placeholder image"></a>
         <p class="pictext">My first Website</p>
    </section>
    <section class="textcontainer">
     <a href= https://cassiep1986.github.io/Code-Refactor>
-     <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
+     <img class = "card" src="./Website.jpg" alt="Placeholder image"></a>
      <p class="pictext">Code-Refractor</p>
 </section>
   </div>
