Updated Resume link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        <a href="#Aboutme">About Me</a>
        <a href="#Work">Work</a>
        <a href="#Contactme">Contact Me</a>
-       <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
+       <a href="./index2.html">Resume</a> 
    </nav>
   </header>
     <img class="headshot"src="./headshot.jpg" alt="Picture of Developer">
