updated headshot img link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <a href="./index2.html">Resume</a> 
    </nav>
   </header>
-    <img class="headshot"src="./headshot.jpg" alt="Picture of Developer">
+    <img class="headshot"src="./Headshot.jpg" alt="Picture of Developer">
     
 <div class="flex1">
   <a name="Aboutme"><h1>About Me</h1></a>
