updated img source

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        <a href="./index2.html">Resume</a> 
    </nav>
   </header>
-    <img class="headshot"src="./Headshot.jpg" alt="Picture of Developer">
+    <img class="headshot"src="https://scontent.fphx1-2.fna.fbcdn.net/v/t1.6435-9/94487748_2844750048907480_3862426637177978880_n.jpg?_nc_cat=105&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Nqad6uEE7CoAX9aJMu6&_nc_ht=scontent.fphx1-2.fna&oh=ec3be8a1ee09f699ae4eeb3f18785292&oe=60D5A730" alt="Picture of Developer">
     
 <div class="flex1">
   <a name="Aboutme"><h1>About Me</h1></a>
