Updated contact Links, added downloadable resume, added new project links and photos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Cassandra Pacheco Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 
 <body>
   <header>
@@ -14,10 +14,10 @@
        <a href="#Aboutme">About Me</a>
        <a href="#Work">Work</a>
        <a href="#Contactme">Contact Me</a>
-       <a href="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/index2.html">Resume</a> 
+       <a href="./CassandraPacheco.pdf" download>Resume</a>
    </nav>
   </header>
-    <img class="headshot"src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/headshot.jpg" alt="Picture of Developer">
+    <img class="headshot"src="./headshot.jpg" alt="Picture of Developer">
     
 <div class="flex1">
   <a name="Aboutme"><h1>About Me</h1></a>
@@ -33,20 +33,19 @@
   <div class="flex2">
   <a name="Work"><h1>Work</h1></a>
    <section class="textcontainer">
-  <a href= https://scratch.mit.edu/projects/531268141><img src="https://cdn.crello.com/api/media/small/251844263/stock-photo-selective-focus-steering-wheel-compact"></a>
-  <p class="pictext">Scratch Game</p>
+  <a href= https://adamdavidburch42.github.io/Jokester><img src="Jokester_Snippet.PNG"></a>
+  <p class="pictext">Jokester</p>
     </section>
   </div> 
   <div class="flex3">
    <section class="textcontainer">
-       <a href= https://cassiep1986.github.io/prework-about-me>
-        <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
-        <p class="pictext">My first Website</p>
+       <a href= https://github.com/Cassiep1986/Professional-README-Generator>
+        <img class = "cardimg" src="README_Demo_Video.gif" alt="Application Demo Gif"></a>
+        <p class="pictext">README Generator</p>
    </section>
    <section class="textcontainer">
-    <a href= https://cassiep1986.github.io/Code-Refactor>
-     <img class = "card" src="C:\Users\cassi\bootcamp\homeworks\Advanced-CSS-Portfolio/Website.jpg" alt="Placeholder image"></a>
-     <p class="pictext">Code-Refractor</p>
+    <a href= https://scratch.mit.edu/projects/531268141><img class = "cardimg" src="./Scratchgame.jpg" alt="Scratchgame image"></a>
+     <p class="pictext">Scratch Game</p>
 </section>
   </div>
     
@@ -57,8 +56,8 @@
   <nav class="bottomnav">
     <a href="tel:6232164385">Phone</a>
     <a href="mailto:cassiep1986@gmail.com">Email</a>
-    <a href="https://github.com/Cassiep1986">Github</a>
-    <a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376">Linkedin</a>
+    <a href="https://github.com/Cassiep1986" target="_blank" rel="noopener noreferrer">Github</a>
+    <a href="https://www.linkedin.com/in/cassandra-pacheco-367ab376" target="_blank" rel="noopener noreferrer" >Linkedin</a>
   </nav>
   </section>
 </footer>
