--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cassandra Pacheco Portfolio</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./CSS/style.css"/>
+    
 
 <body>
   <header>
@@ -22,7 +25,7 @@
 <div class="flex1">
   <a name="Aboutme"><h1>About Me</h1></a>
   <section class="text">
-    <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript, React, Node JS, SQL, JSX.</p>
+    <p>Hello, my name is Cassandra Pacheco and I am a (soon to be) certified full-stack web developer. Although new to web development, I (will soon) have completed a full-stack program with the University of Arizona learning the following languages: HTML, CSS, Javascript (including Node.JS), SQL. I also have experience with the following frameworks/libraries: React, Sequelize, Express, Inquirer, Bootstrap, Bulma, jQuery, </p>
 
     </p>In my off time I like to spend time with family. I also enjoy baking, crafting and watching documentaries on Netflix. Please see my work below as an example of some of my new learned skills.</p>
   </section>
@@ -33,7 +36,7 @@
   <div class="flex2">
   <a name="Work"><h1>Work</h1></a>
    <section class="textcontainer">
-  <a href= https://adamdavidburch42.github.io/Jokester><img src="Jokester_Snippet.PNG"></a>
+  <a href= https://adamdavidburch42.github.io/Jokester><img src="images/Jokester_Snippet.PNG"></a>
   <p class="pictext">Jokester</p>
     </section>
   </div> 
