updated image sources

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <div class="flex3">
    <section class="textcontainer">
        <a href= https://github.com/Cassiep1986/Professional-README-Generator>
-        <img class = "cardimg" src="README_Demo_Video.gif" alt="Application Demo Gif"></a>
+        <img class = "cardimg" src="./images/README_Demo_Video.gif" alt="Application Demo Gif"></a>
         <p class="pictext">README Generator</p>
    </section>
    <section class="textcontainer">
-    <a href= https://scratch.mit.edu/projects/531268141><img class = "cardimg" src="./Scratchgame.jpg" alt="Scratchgame image"></a>
+    <a href= https://scratch.mit.edu/projects/531268141><img class = "cardimg" src="./images/Scratchgame.jpg" alt="Scratchgame image"></a>
      <p class="pictext">Scratch Game</p>
 </section>
   </div>
